--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Personagens</a></li>
-                <li><a href="#">HQ´s</a></li>
-                <li><a href="#">Séries/Filmes</a></li>
-                <li><a href="#">Noticias</a></li>
-                <li><a href="#">Loja</a></li>
+                <li><a href="https://gabryelsilvamoura.github.io/DC-Home/">Home</a></li>
+                <li><a href="https://czar-07.github.io/Personagens-DC/">Personagens</a></li>
+                <li><a href="https://cassiosilva007.github.io/HQ/index.html">HQ´s</a></li>
+                <li><a href="https://amandat0802.github.io/Dc_SeriesFilmes/">Séries/Filmes</a></li>
+                <li><a href="https://enzoribeirodasilva.github.io/noticias/">Noticias</a></li>
+                <li><a href="index.html">Loja</a></li>
             </ul>
         </nav>
 
